--- a/assets/templates/new/redesign.css
+++ b/assets/templates/new/redesign.css
@@ -1180,7 +1180,12 @@ body .calc-prod .ut2-pb__right {
 }
 
 .calc_box-bd .row > div {
+  width: 100%;
   padding-left: 20px;
+}
+
+.calc-prod .calc_box .calculator {
+  width: 100%;
 }
 
 .col-12 {
@@ -1220,11 +1225,14 @@ body .calc-prod .ut2-pb__right {
 
 .ut2-pb__button .btns-features {
   display: flex;
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
 .ut2-pb__button .ty-btn {
+  width: auto;
   height: 45px;
+  flex: 1 1 100%;
+  max-width: 100%;
 }
 
 .ut2-pb__button .ty-btn span {
@@ -1318,7 +1326,51 @@ body .calc-prod .ut2-pb__right {
   color: #333;
 }
 
-/** responsive **/
+/** responsive product page **/
+@media screen and (max-width: 1024px) {
+  .calc_box-bd .row {
+    flex-direction: column;
+  }
+  .calc_box-bd .row > div {
+    flex: 1 1 100%;
+    max-width: 100%;
+  }
+  .calc_box-bd .row > div + div {
+    margin-top: 20px;
+  }
+  .ut2-pb__button .btns-purchase .btns__list {
+    flex-direction: column;
+  }
+  .ut2-pb__button {
+    flex-direction: column;
+  }
+  .ut2-pb__button .btns-features {
+    margin-left: 0;
+    margin-top: 10px;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 812px) {
+  .ut2-pb__img-wrapper,
+.ut2-pb__right {
+    flex: 1 1 100%;
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .ut2-pb__img-wrapper .ut2-pb__img {
+    top: 0;
+  }
+  .ut2-pb__title {
+    font-size: 22px;
+  }
+  .ut2-pb .ty-product-img {
+    width: 75% !important;
+  }
+  .ut2-pb .ty-product-thumbnails.ab-vertical-thumbnails {
+    width: 15% !important;
+  }
+}
 /** product-page content features **/
 .content-features > * {
   max-width: 865px;
@@ -1379,8 +1431,8 @@ body .calc-prod .ut2-pb__right {
 }
 @media (max-width: 540px) {
   .row_form_a,
-  .row_form_b,
-  #vopros_form textarea {
+.row_form_b,
+#vopros_form textarea {
     width: 100%;
   }
 }
@@ -1513,6 +1565,7 @@ a.ty-quick-view__title {
   min-height: 0;
   max-height: none;
   -webkit-hyphens: none;
+      -ms-hyphens: none;
           hyphens: none;
 }
 
@@ -1520,6 +1573,7 @@ a.ty-quick-view__title {
 .owl-carousel:not(.ty-scroller-pd).ty-scroller-list .ut2-gl__item:hover .ut2-gl__name .product-title {
   max-height: none;
   -webkit-hyphens: none;
+      -ms-hyphens: none;
           hyphens: none;
 }
 
@@ -1559,12 +1613,12 @@ a.ty-quick-view__title {
   margin-top: 30px;
 }
 
-.owl-carousel .owl-wrapper-outer {
+.ty-tabs__content .owl-carousel .owl-wrapper-outer {
   overflow: visible;
 }
 
-.owl-carousel .owl-wrapper-outer::before,
-.owl-carousel .owl-wrapper-outer::after {
+.ty-tabs__content .owl-carousel .owl-wrapper-outer::before,
+.ty-tabs__content .owl-carousel .owl-wrapper-outer::after {
   top: 0;
   width: calc((100vw - 100%) / 2);
   bottom: 0;
@@ -1574,17 +1628,17 @@ a.ty-quick-view__title {
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.71) 42.94%, rgba(255, 255, 255, 0) 86.06%);
 }
 
-.owl-carousel .owl-wrapper-outer::before {
+.ty-tabs__content .owl-carousel .owl-wrapper-outer::before {
   left: 0;
   transform: translateX(-100%);
 }
 
-.owl-carousel .owl-wrapper-outer::after {
+.ty-tabs__content .owl-carousel .owl-wrapper-outer::after {
   right: 0;
   transform: translateX(100%) rotate(180deg);
 }
 
-.owl-theme .owl-controls .owl-page span {
+.ty-tabs__content .owl-theme .owl-controls .owl-page span {
   display: block;
   width: 100px;
   height: 1px;
@@ -1595,8 +1649,8 @@ a.ty-quick-view__title {
   background: #d9d9d9;
 }
 
-.owl-theme .owl-controls .owl-page.active span,
-.owl-theme .owl-controls.clickable .owl-page:hover span {
+.ty-tabs__content .owl-theme .owl-controls .owl-page.active span,
+.ty-tabs__content .owl-theme .owl-controls.clickable .owl-page:hover span {
   background: #333333;
 }
 
@@ -1703,6 +1757,7 @@ a.ty-quick-view__title {
 .ab__mb_item-name {
   -webkit-user-select: none;
   -moz-user-select: none;
+  -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
 }
@@ -1952,6 +2007,14 @@ a.ty-quick-view__title {
   .mse2_number_inputs .form-group .input-sm {
     font-size: 14px;
   }
+  input[type=text],
+input[type=password],
+input[type=tel],
+input[type=number],
+textarea,
+select {
+    font-size: 14px;
+  }
 }
 @media screen and (max-width: 767px) {
   .container-fluid-row > .row-fluid {
@@ -1962,7 +2025,7 @@ a.ty-quick-view__title {
     margin: 0;
   }
   .ty-breadcrumbs__a,
-  .ty-breadcrumbs__current {
+.ty-breadcrumbs__current {
     font-size: 12px;
   }
   .ty-breadcrumbs__slash {
@@ -1970,7 +2033,7 @@ a.ty-quick-view__title {
     font-size: 12px;
   }
   .ty-breadcrumbs__current,
-  .ty-breadcrumbs + a.ut2-btn.hidden {
+.ty-breadcrumbs + a.ut2-btn.hidden {
     display: inline-block;
   }
   .ut2-extra-block-title .ty-mainbox-title {
@@ -1988,12 +2051,12 @@ a.ty-quick-view__title {
     margin-left: -15px;
   }
   .is_scrolled .ty-dropdown-box.ut2-filters div.ty-dropdown-box__content,
-  .is_scrolled .ty-dropdown-box.ut2-categories div.ty-dropdown-box__content {
+.is_scrolled .ty-dropdown-box.ut2-categories div.ty-dropdown-box__content {
     top: 59px;
     padding: 20px 30px;
   }
   .ty-dropdown-box.ut2-filters .ut2-btn-close,
-  .ty-dropdown-box.ut2-categories .ut2-btn-close {
+.ty-dropdown-box.ut2-categories .ut2-btn-close {
     top: 10px;
     right: 10px;
   }
@@ -2027,7 +2090,7 @@ a.ty-quick-view__title {
     margin-bottom: 0;
   }
   .ty-dropdown-box.ut2-filters .ty-dropdown-box__title,
-  .ty-dropdown-box.ut2-categories .ty-dropdown-box__title {
+.ty-dropdown-box.ut2-categories .ty-dropdown-box__title {
     height: 35px;
     border: none;
     padding: 0;
@@ -2036,7 +2099,7 @@ a.ty-quick-view__title {
     border-radius: 0;
   }
   .ty-dropdown-box.ut2-filters .ty-dropdown-box__title:hover,
-  .ty-dropdown-box.ut2-categories .ty-dropdown-box__title:hover {
+.ty-dropdown-box.ut2-categories .ty-dropdown-box__title:hover {
     box-shadow: none;
     background: #ffc700;
   }
@@ -2049,12 +2112,12 @@ a.ty-quick-view__title {
     padding: 0;
   }
   .mse2_pagination,
-  .ab__sf_cat_desc {
+.ab__sf_cat_desc {
     float: none;
     width: 100%;
   }
   .ty-pagination__item,
-  .ty-pagination__selected {
+.ty-pagination__selected {
     height: 35px;
     min-width: 35px;
     line-height: 35px;
@@ -2063,7 +2126,7 @@ a.ty-quick-view__title {
     display: none;
   }
   .ty-pagination .ty-pagination__selected + a,
-  .ty-pagination .ty-pagination__selected + a + a {
+.ty-pagination .ty-pagination__selected + a + a {
     display: inline-block !important;
   }
   .ty-wysiwyg-content * {
