--- a/redesign.scss
+++ b/redesign.scss
@@ -1008,7 +1008,11 @@ body .calc-prod .ut2-pb__right {
   margin-left: -20px;
 }
 .calc_box-bd .row > div {
+  width: 100%;
   padding-left: 20px;
+}
+.calc-prod .calc_box .calculator {
+  width: 100%;
 }
 .col-12 {
   flex: 0 0 100%;
@@ -1043,10 +1047,13 @@ body .calc-prod .ut2-pb__right {
 }
 .ut2-pb__button .btns-features {
   display: flex;
-  margin-left: 20px;
+  margin-left: 10px;
 }
 .ut2-pb__button .ty-btn {
+  width: auto;
   height: 45px;
+  flex: 1 1 100%;
+  max-width: 100%;
 }
 .ut2-pb__button .ty-btn span {
   font-size: 14px;
@@ -1125,7 +1132,52 @@ body .calc-prod .ut2-pb__right {
   color: #333;
 }
 
-/** responsive **/
+/** responsive product page **/
+
+@media screen and (max-width: 1024px) {
+  .calc_box-bd .row {
+    flex-direction: column;
+  }
+  .calc_box-bd .row > div {
+    flex: 1 1 100%;
+    max-width: 100%;
+  }
+  .calc_box-bd .row > div + div {
+    margin-top: 20px;
+  }
+  .ut2-pb__button .btns-purchase .btns__list {
+    flex-direction: column;
+  }
+  .ut2-pb__button {
+    flex-direction: column;
+  }
+  .ut2-pb__button .btns-features {
+    margin-left: 0;
+    margin-top: 10px;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 812px) {
+  .ut2-pb__img-wrapper,
+  .ut2-pb__right {
+    flex: 1 1 100%;
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .ut2-pb__img-wrapper .ut2-pb__img {
+    top: 0;
+  }
+  .ut2-pb__title {
+    font-size: 22px;
+  }
+  .ut2-pb .ty-product-img {
+    width: 75% !important;
+  }
+  .ut2-pb .ty-product-thumbnails.ab-vertical-thumbnails {
+    width: 15% !important;
+  }
+}
 
 /** product-page content features **/
 
@@ -1340,28 +1392,32 @@ a.ty-quick-view__title {
 .span16 > .ty-tabs__content {
   margin-top: 30px;
 }
-.owl-carousel .owl-wrapper-outer {
+.ty-tabs__content .owl-carousel .owl-wrapper-outer {
   overflow: visible;
 }
-.owl-carousel .owl-wrapper-outer::before,
-.owl-carousel .owl-wrapper-outer::after {
+.ty-tabs__content .owl-carousel .owl-wrapper-outer::before,
+.ty-tabs__content .owl-carousel .owl-wrapper-outer::after {
   top: 0;
   width: calc((100vw - 100%) / 2);
   bottom: 0;
   z-index: 1;
   content: "";
   position: absolute;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.71) 42.94%, rgba(255, 255, 255, 0) 86.06%);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.71) 42.94%,
+    rgba(255, 255, 255, 0) 86.06%
+  );
 }
-.owl-carousel .owl-wrapper-outer::before {
+.ty-tabs__content .owl-carousel .owl-wrapper-outer::before {
   left: 0;
   transform: translateX(-100%);
 }
-.owl-carousel .owl-wrapper-outer::after {
+.ty-tabs__content .owl-carousel .owl-wrapper-outer::after {
   right: 0;
   transform: translateX(100%) rotate(180deg);
 }
-.owl-theme .owl-controls .owl-page span {
+.ty-tabs__content .owl-theme .owl-controls .owl-page span {
   display: block;
   width: 100px;
   height: 1px;
@@ -1373,8 +1429,8 @@ a.ty-quick-view__title {
   border-radius: 0;
   background: #d9d9d9;
 }
-.owl-theme .owl-controls .owl-page.active span,
-.owl-theme .owl-controls.clickable .owl-page:hover span {
+.ty-tabs__content .owl-theme .owl-controls .owl-page.active span,
+.ty-tabs__content .owl-theme .owl-controls.clickable .owl-page:hover span {
   background: #333333;
 }
 .span16 > .ty-tabs__content .owl-controls {
@@ -1746,7 +1802,16 @@ a.ty-quick-view__title {
   .mse2_number_inputs .form-group .input-sm {
     font-size: 14px;
   }
+  input[type="text"],
+  input[type="password"],
+  input[type="tel"],
+  input[type="number"],
+  textarea,
+  select {
+    font-size: 14px;
+  }
 }
+
 @media screen and (max-width: 767px) {
   .container-fluid-row > .row-fluid {
     padding-left: 25px;
