product page and mobile menu done

--- a/assets/templates/new/redesign.css
+++ b/assets/templates/new/redesign.css
@@ -73,6 +73,10 @@ body.is_scrolled .header-info {
   justify-content: flex-start;
 }
 
+.menu-body {
+  height: auto;
+}
+
 .hover-li {
   padding: 0;
 }
@@ -90,6 +94,21 @@ body.is_scrolled .header-info {
   padding: 0;
 }
 
+.burger-item__info.active {
+  background: var(--yellow);
+}
+
+.second-menu-el1.active,
+.second-menu-el2.active,
+.second-menu-el3.active,
+.second-menu-el4.active,
+.second-menu-el5.active,
+.second-menu-el6.active,
+.second-menu-el7.active {
+  opacity: 1;
+  z-index: 11;
+}
+
 .burger-item__info .hover-menu-title {
   padding: 23px 0 23px 21px;
   display: block;
@@ -101,6 +120,10 @@ body.is_scrolled .header-info {
   right: 20px;
   position: relative;
   transform: translateY(-50%);
+}
+
+.burger-item__info .burger-logo.active {
+  transform: translateY(-50%) rotate(90deg);
 }
 
 .burger-menu {
@@ -130,12 +153,28 @@ body.is_scrolled .header-info {
   height: 1px;
 }
 
+.mobile-icon span::before {
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  content: "";
+  display: block;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
 .second-menu {
   padding: 0;
 }
 
 .second-menu__item {
+  padding: 0;
+}
+
+.second-menu__item a {
   padding: 23px;
+  display: block;
 }
 
 .container-fluid-row,
@@ -151,6 +190,7 @@ body.is_scrolled .header-info {
 }
 
 .ty-wysiwyg-content {
+  max-width: 870px;
   line-height: 1.8;
 }
 
@@ -923,6 +963,10 @@ select:focus {
   flex-direction: row-reverse;
 }
 
+.touch .ty-value-changer {
+  width: 100%;
+}
+
 .ty-qty input.ty-value-changer__input,
 .quantity input.ty-value-changer__input {
   flex: 0 1 auto;
@@ -1060,6 +1104,26 @@ select:focus {
   display: none;
 }
 
+.benefits .benefit i {
+  font-size: 0;
+}
+
+.benefits .benefit svg {
+  width: 26px;
+  height: 30px;
+  margin: 0 2px;
+}
+
+.benefits .benefit header,
+.benefits .benefit header a {
+  font-weight: 600;
+  color: #333;
+}
+
+.benefits .benefit p {
+  color: inherit;
+}
+
 /** product page  **/
 .ty-product-block {
   margin: 5px 0 30px;
@@ -1091,19 +1155,6 @@ body .calc-prod .ut2-pb__right {
   display: none;
 }
 
-.ty-image-zoom__wrapper {
-  width: 100%;
-  height: 0;
-  display: block;
-  padding-bottom: 100%;
-}
-
-.ty-image-zoom__wrapper .ty-previewer {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
 .ut2-pb__title {
   color: #333;
   margin: 17px 0 4px;
@@ -1111,9 +1162,11 @@ body .calc-prod .ut2-pb__right {
 }
 
 .ut2-pb .ty-product-thumbnails .ty-product-thumbnails__item {
-  height: 70px;
+  height: 0;
+  width: 100%;
   border: 1px solid transparent;
-  padding: 0;
+  padding: 0 0 100%;
+  position: relative;
   margin-right: 0;
 }
 
@@ -1141,6 +1194,10 @@ body .calc-prod .ut2-pb__right {
   height: 100%;
   -o-object-fit: contain;
   object-fit: contain;
+}
+
+.ty-product-thumbnails img {
+  position: absolute;
 }
 
 .ty-product-block .ty-qty-in-stock,
@@ -1235,6 +1292,10 @@ body .calc-prod .ut2-pb__right {
   max-width: 100%;
 }
 
+.ut2-pb__button .ty-btn > span {
+  height: 45px;
+}
+
 .ut2-pb__button .ty-btn span {
   font-size: 14px;
 }
@@ -1323,6 +1384,7 @@ body .calc-prod .ut2-pb__right {
 }
 
 .ty-product-block .ty-tabs .ty-tabs__item.active .ty-tabs__a {
+  width: 100%;
   color: #333;
 }
 
@@ -1346,15 +1408,24 @@ body .calc-prod .ut2-pb__right {
   }
   .ut2-pb__button .btns-features {
     margin-left: 0;
-    margin-top: 10px;
+    margin-top: 12px;
     justify-content: center;
+  }
+  .ty-product-img {
+    min-height: 0;
+  }
+  .ty-product-block .ty-tabs .ty-tabs__item .ty-tabs__a {
+    padding: 5px 40px;
   }
 }
 @media screen and (max-width: 812px) {
   .ut2-pb__img-wrapper,
-.ut2-pb__right {
+  .ut2-pb__right {
     flex: 1 1 100%;
     max-width: 100%;
+  }
+  body .calc-prod .ut2-pb__right {
+    padding-left: 0;
   }
 }
 @media screen and (max-width: 767px) {
@@ -1369,6 +1440,38 @@ body .calc-prod .ut2-pb__right {
   }
   .ut2-pb .ty-product-thumbnails.ab-vertical-thumbnails {
     width: 15% !important;
+  }
+  .card-c {
+    padding: 15px 20px 10px;
+  }
+  .ut2-pb .ty-product-thumbnails .ty-product-thumbnails__item:not(:last-child) {
+    margin-bottom: 20%;
+  }
+  .ut2-breadcrumbs__wrapper {
+    margin-top: 15px;
+  }
+  .ut2-pb__img-wrapper {
+    padding-bottom: 25px;
+  }
+  .ty-product-block .ty-tabs .ty-tabs__item .ty-tabs__a {
+    height: 45px;
+    padding: 5px 30px;
+    font-size: 14px;
+  }
+  .main-content-grid,
+  .side-grid {
+    padding-bottom: 0;
+  }
+  .ty-product-block {
+    margin-bottom: 0;
+  }
+}
+@media screen and (max-width: 495px) {
+  .ty-product-block .ty-tabs .ty-tabs__item {
+    width: 50%;
+  }
+  .span16 .ut2-pb .ty-tabs__content {
+    padding: 30px 0;
   }
 }
 /** product-page content features **/
@@ -1431,8 +1534,8 @@ body .calc-prod .ut2-pb__right {
 }
 @media (max-width: 540px) {
   .row_form_a,
-.row_form_b,
-#vopros_form textarea {
+  .row_form_b,
+  #vopros_form textarea {
     width: 100%;
   }
 }
@@ -1497,10 +1600,12 @@ body .calc-prod .ut2-pb__right {
   margin-top: 20px;
   border-top: none;
   padding-top: 0;
+  margin-left: -10px;
 }
 
 .reviews #comment-form .form-actions button {
   width: 170px;
+  margin: 10px 0 0 10px;
 }
 
 .reviews .comments {
@@ -1565,7 +1670,6 @@ a.ty-quick-view__title {
   min-height: 0;
   max-height: none;
   -webkit-hyphens: none;
-      -ms-hyphens: none;
           hyphens: none;
 }
 
@@ -1573,7 +1677,6 @@ a.ty-quick-view__title {
 .owl-carousel:not(.ty-scroller-pd).ty-scroller-list .ut2-gl__item:hover .ut2-gl__name .product-title {
   max-height: none;
   -webkit-hyphens: none;
-      -ms-hyphens: none;
           hyphens: none;
 }
 
@@ -1626,6 +1729,7 @@ a.ty-quick-view__title {
   content: "";
   position: absolute;
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.71) 42.94%, rgba(255, 255, 255, 0) 86.06%);
+  pointer-events: none;
 }
 
 .ty-tabs__content .owl-carousel .owl-wrapper-outer::before {
@@ -1638,9 +1742,13 @@ a.ty-quick-view__title {
   transform: translateX(100%) rotate(180deg);
 }
 
+.owl-theme .owl-controls .owl-page {
+  width: 11.1111%;
+}
+
 .ty-tabs__content .owl-theme .owl-controls .owl-page span {
   display: block;
-  width: 100px;
+  width: calc(100% - 30px);
   height: 1px;
   margin: 5px 15px;
   filter: none;
@@ -1757,7 +1865,6 @@ a.ty-quick-view__title {
 .ab__mb_item-name {
   -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
 }
@@ -1971,6 +2078,15 @@ a.ty-quick-view__title {
     width: 75%;
   }
 }
+@media screen and (min-width: 1221px) {
+  .menu-body {
+    max-height: calc(100vh - 200px);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  }
+  body.is_scrolled .menu-body {
+    max-height: calc(100vh - 100px);
+  }
+}
 @media screen and (max-width: 1220px) {
   .container {
     width: 100%;
@@ -1979,11 +2095,84 @@ a.ty-quick-view__title {
   body.is_scrolled .header-info {
     padding-bottom: 65px;
   }
-  .is_scrolled .menu-wrapper {
+  body.is_scrolled .menu-wrapper {
     padding: 10px 20px;
   }
   .mobile-logo {
     height: 40px;
+  }
+  .mobile-icon._active span {
+    transform: none;
+    opacity: 0;
+  }
+  .header-nav {
+    top: 160px;
+    width: 360px;
+    bottom: 0;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    padding-bottom: 30px;
+  }
+  .header-nav._active {
+    position: fixed;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+  .menu-body._active {
+    left: 0;
+    width: 100%;
+  }
+  .menu-hover__body {
+    left: 0;
+    width: 100%;
+    position: static;
+  }
+  .burger-item__info {
+    left: 0;
+    width: 100%;
+    padding: 0;
+    overflow: visible;
+    max-height: none;
+  }
+  .burger-item__info.active {
+    z-index: 1;
+  }
+  .second-menu.active {
+    margin-top: 0;
+  }
+  .second-menu.second-menu-el7,
+  .second-menu.second-menu-el6,
+  .second-menu.second-menu-el5,
+  .second-menu.second-menu-el4,
+  .second-menu.second-menu-el3,
+  .second-menu.second-menu-el2,
+  .second-menu.second-menu-el1 {
+    top: 100%;
+    width: 100%;
+    height: 330px;
+    position: absolute;
+    overflow-y: auto;
+  }
+  .second-menu__item a {
+    padding: 15px 21px;
+  }
+  .burger-item__info .burger-logo {
+    top: 25px;
+  }
+  body.is_scrolled .header-nav {
+    top: 58px;
+  }
+  .header-nav > li {
+    width: 100%;
+  }
+  .hover-li {
+    height: auto;
+  }
+  .burger-item__info .hover-menu-title {
+    padding: 15px 0 15px 21px;
+  }
+  .social-info {
+    padding: 0 24px;
+    margin-top: auto;
   }
 }
 @media screen and (max-width: 1124px) and (min-width: 768px) {
@@ -2008,11 +2197,11 @@ a.ty-quick-view__title {
     font-size: 14px;
   }
   input[type=text],
-input[type=password],
-input[type=tel],
-input[type=number],
-textarea,
-select {
+  input[type=password],
+  input[type=tel],
+  input[type=number],
+  textarea,
+  select {
     font-size: 14px;
   }
 }
@@ -2025,7 +2214,7 @@ select {
     margin: 0;
   }
   .ty-breadcrumbs__a,
-.ty-breadcrumbs__current {
+  .ty-breadcrumbs__current {
     font-size: 12px;
   }
   .ty-breadcrumbs__slash {
@@ -2033,7 +2222,7 @@ select {
     font-size: 12px;
   }
   .ty-breadcrumbs__current,
-.ty-breadcrumbs + a.ut2-btn.hidden {
+  .ty-breadcrumbs + a.ut2-btn.hidden {
     display: inline-block;
   }
   .ut2-extra-block-title .ty-mainbox-title {
@@ -2050,13 +2239,15 @@ select {
     padding: 30px 0 27px;
     margin-left: -15px;
   }
-  .is_scrolled .ty-dropdown-box.ut2-filters div.ty-dropdown-box__content,
-.is_scrolled .ty-dropdown-box.ut2-categories div.ty-dropdown-box__content {
-    top: 59px;
+  .ty-dropdown-box.ut2-filters .ty-dropdown-box__title.open + div.ty-dropdown-box__content {
     padding: 20px 30px;
   }
+  .is_scrolled .ty-dropdown-box.ut2-filters div.ty-dropdown-box__content,
+  .is_scrolled .ty-dropdown-box.ut2-categories div.ty-dropdown-box__content {
+    top: 59px;
+  }
   .ty-dropdown-box.ut2-filters .ut2-btn-close,
-.ty-dropdown-box.ut2-categories .ut2-btn-close {
+  .ty-dropdown-box.ut2-categories .ut2-btn-close {
     top: 10px;
     right: 10px;
   }
@@ -2090,7 +2281,7 @@ select {
     margin-bottom: 0;
   }
   .ty-dropdown-box.ut2-filters .ty-dropdown-box__title,
-.ty-dropdown-box.ut2-categories .ty-dropdown-box__title {
+  .ty-dropdown-box.ut2-categories .ty-dropdown-box__title {
     height: 35px;
     border: none;
     padding: 0;
@@ -2099,7 +2290,7 @@ select {
     border-radius: 0;
   }
   .ty-dropdown-box.ut2-filters .ty-dropdown-box__title:hover,
-.ty-dropdown-box.ut2-categories .ty-dropdown-box__title:hover {
+  .ty-dropdown-box.ut2-categories .ty-dropdown-box__title:hover {
     box-shadow: none;
     background: #ffc700;
   }
@@ -2112,12 +2303,12 @@ select {
     padding: 0;
   }
   .mse2_pagination,
-.ab__sf_cat_desc {
+  .ab__sf_cat_desc {
     float: none;
     width: 100%;
   }
   .ty-pagination__item,
-.ty-pagination__selected {
+  .ty-pagination__selected {
     height: 35px;
     min-width: 35px;
     line-height: 35px;
@@ -2126,11 +2317,39 @@ select {
     display: none;
   }
   .ty-pagination .ty-pagination__selected + a,
-.ty-pagination .ty-pagination__selected + a + a {
+  .ty-pagination .ty-pagination__selected + a + a {
     display: inline-block !important;
   }
   .ty-wysiwyg-content * {
     font-size: 14px;
+  }
+  .ab__mb_items .ab__mb_item-name {
+    font-size: 14px;
+  }
+  .ab__mb_items .ab__mb_item-title.cm-combination:after {
+    right: 20px;
+  }
+  .ab__mb_items .ab__mb_item-title.cm-combination {
+    padding-right: 35px;
+  }
+  .ty-subheader,
+  div.ty-mainbox-title,
+  .ty-footer-form-block__title,
+  a.ty-quick-view__title {
+    font-size: 20px;
+  }
+  .ty-tabs__content .owl-theme .owl-controls .owl-page span {
+    width: calc(100% - 10px);
+    margin: 5px 5px;
+  }
+  .benefits {
+    border-top: none;
+  }
+  .benefits .benefit:nth-child(2n) {
+    border-left: none;
+    border-right: none;
+    border-top: 1px solid #f0f0f0;
+    border-bottom: 1px solid #f0f0f0;
   }
 }
 @media screen and (max-width: 575px) {
@@ -2147,5 +2366,18 @@ select {
   }
   .subcategories-popular-wrapper._expanded .popular-button {
     transform: translate(50%, 150%);
+  }
+}
+@media screen and (max-width: 479px) {
+  .span16 > .ty-tabs__content .owl-controls {
+    display: none !important;
+  }
+  .header-nav {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 390px) {
+  .header-nav._active {
+    width: 100%;
   }
 }
