--- a/assets/templates/new/redesign.css
+++ b/assets/templates/new/redesign.css
@@ -280,15 +280,19 @@ body.is_scrolled .header-info {
 .ty-wysiwyg-content th {
   height: 45px;
   padding: 0.4em 0.8em;
-  min-width: 200px;
+  min-width: -moz-min-content;
+  min-width: min-content;
 }
 
 .ty-wysiwyg-content table th,
-.ty-wysiwyg-content table thead td,
 .ty-wysiwyg-content table > *:first-child > *:first-child th {
+  font-weight: 600;
+  background: #f5f5f5;
+}
+
+.ty-wysiwyg-content table thead td {
   color: #fff;
   background: #333;
-  font-weight: 500;
 }
 
 .ty-wysiwyg-content table *:not(thead) *:not(:first-child) > td,
@@ -1124,6 +1128,47 @@ select:focus {
   color: inherit;
 }
 
+/** popup dialog **/
+div.ui-dialog .ui-dialog-titlebar {
+  height: auto;
+  padding: 52px 43px 0;
+  background: #fff;
+}
+
+div.ui-dialog .ui-dialog-title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 24px;
+  color: #333;
+  text-transform: uppercase;
+}
+
+.ui-widget-header .ui-icon-closethick {
+  opacity: 1;
+}
+
+.ui-widget-header .ui-icon-closethick::before,
+.ui-dialog:not(.ty-swiper-previewer__dialog) .ui-widget-header .ui-icon-closethick::before {
+  font-family: inherit;
+  content: "";
+  opacity: 1;
+  filter: none;
+  width: 20px;
+  height: 20px;
+  display: block;
+  background: url("images/icons/close.svg") center/contain no-repeat transparent;
+}
+
+div.ui-dialog .ui-dialog-content .object-container {
+  width: 600px;
+  padding: 20px 43px;
+}
+
+.ty-control-group__title {
+  display: none;
+}
+
+/** popup dialog end **/
 /** product page  **/
 .ty-product-block {
   margin: 5px 0 30px;
